--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-    "name": "vk-ascii-art",
-    "main": "./lib/vk-ascii-art",
-    "version": "1.0.0",
-    "description": "A short description of your package",
-    "keywords": [
-    ],
-    "activationCommands": {
-        "atom-workspace": "vk-ascii-art:convert"
-    },
-    "repository": "https://github.com/atom-repo/-vk-ascii-art",
-    "license": "MIT",
-    "engines": {
-        "atom": ">=1.0.0 <2.0.0"
-    },
-    "dependencies": {
-        "figlet": "1.0.8"
-    }
+  "name": "vk-ascii-art",
+  "main": "./lib/vk-ascii-art",
+  "version": "1.1.0",
+  "description": "A short description of your package",
+  "keywords": [],
+  "activationCommands": {
+    "atom-workspace": "vk-ascii-art:convert"
+  },
+  "repository": "https://github.com/atom-repo/-vk-ascii-art",
+  "license": "MIT",
+  "engines": {
+    "atom": ">=1.0.0 <2.0.0"
+  },
+  "dependencies": {
+    "figlet": "1.0.8"
+  }
 }
